samples/_failures_safe/1761669435_adfd80_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d0461e5d.c: In function ‘main’:
./samples/SAFE/__tmp_d0461e5d.c:139:5: error: expected expression at end of input
  139 |     char choice_str[
      |     ^~~~
./samples/SAFE/__tmp_d0461e5d.c:139:5: error: expected declaration or statement at end of input
